# karimado-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
karimado/: Cargo.toml  README.md
karimado-source-dl/: Cargo.toml  README.md
karimado-source-dl/examples/: README.md  downloader-download.md  downloader-download.rs
karimado-source-dl/src/: archive.rs  backend.rs  contrib.rs  download.rs  downloader.rs  downloader_test.rs  error.rs  lib.rs  tests.rs  url.rs  url_test.rs
karimado-source-dl/src/archive/: gzip.rs  gzip_test.rs  mime.rs  zip.rs  zip_test.rs
karimado-source-dl/src/backend/: libgit2.rs  libgit2_test.rs  local.rs  local_test.rs  reqwest.rs  reqwest_test.rs
karimado-source-dl/src/url/: scheme.rs
karimado-source-dl/tests/: examples.rs
karimado-source-template/: Cargo.toml  README.md
karimado-tasks/: Cargo.toml  README.md
karimado-tasks/examples/: README.md  karimado-tasks-execute.md  karimado-tasks-execute.rs  karimado-tasks-list.md  karimado-tasks-list.rs  karimado-tasks-parallel-execute.md  karimado-tasks-parallel-execute.rs  karimado-tasks-with-clap.md  karimado-tasks-with-clap.rs  taskmgr-execute.md  taskmgr-execute.rs  taskmgr-list.md  taskmgr-list.rs  taskmgr-parallel-execute.md  taskmgr-parallel-execute.rs  taskmgr.md  taskmgr.rs
karimado-tasks/examples/karimado/: tasks.toml
karimado-tasks/examples/karimado/tasks/: cargo.toml  ruby.toml
karimado-tasks/src/: error.rs  lib.rs  shell.rs  task.rs  taskfile.rs  taskmgr.rs  taskmgr_builder.rs  tests.rs
karimado-tasks/src/taskfile/: include.rs  task.rs
karimado-tasks/src/taskmgr/: build.rs  build_test.rs  execute.rs  execute_test.rs  list.rs  list_test.rs  parallel.rs  parallel_test.rs
karimado-tasks/tests/: examples.rs
karimado-tasks/tests/fixtures/err-taskfile-include-nonexists/: tasks.toml
karimado-tasks/tests/fixtures/ok-taskfile-full/tasks/: cargo.toml  ruby.toml
karimado/src/: assets.rs  cli.rs  config.rs  contrib.rs  core.rs  lib.rs  main.rs
karimado/src/assets/template/: karimado.toml
karimado/src/assets/template/karimado/: tasks.toml
karimado/src/cli/: build.rs  contrib.rs  mod.rs  new.rs  root.rs  run.rs  scaffold.rs
karimado/src/cli/scaffold/: install.rs
karimado/src/config/: tasks.rs  workspace.rs
karimado/src/contrib/: cli.rs  fs.rs
karimado/src/core/: archive.rs  download.rs  rsync.rs  task.rs  tasks.rs
karimado/src/core/archive/: zip.rs
karimado/src/core/download/: git_https.rs  https.rs
karimado/src/core/rsync/: options.rs  worker.rs
karimado/src/core/task/: taskfile.rs  taskmgr.rs
karimado/src/core/task/taskfile/: include.rs
karimado/src/core/tasks/: command.rs  task.rs  taskfile.rs  taskmgr.rs  taskmgr_builder.rs
karimado/src/core/tasks/taskfile/: include.rs  task.rs
karimado/src/core/tasks/taskmgr/: execute.rs  list.rs  parallel.rs
karimado/tests/: examples.rs
