[package]
name = "karimado-source-dl"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "LGPL-3.0-only"
edition = "2021"

[dependencies]
log = "0.4.21"
thiserror = "1.0.58"

[dev-dependencies]
ctor = "0.2.7"
env_logger = "0.11.2"
