[package]
name = "karimado-source-dl"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "LGPL-3.0-only"
edition = "2021"

[dependencies]
fastrand = "2.0.1"
flate2 = "1.0.28"
git2 = "0.18.2"
infer = "0.15.0"
log = "0.4.21"
reqwest = { version = "0.11.24", features = ["blocking"] }
strum = { version = "0.26.1", features = ["derive"] }
tar = "0.4.40"
thiserror = "1.0.58"
url = "2.5.0"
walkdir = "2.5.0"
zip = "0.6.6"

[dev-dependencies]
ctor = "0.2.7"
env_logger = "0.11.2"
tempfile = "3.10.1"
