[package]
name = "karimado-tasks"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "LGPL-3.0-only"
edition = "2021"

[dependencies]
colored = "2.1.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
flurry = "0.5.0"
log = "0.4.21"
serde = { version = "1.0.196", features = ["derive"] }
shared_child = "1.0.0"
thiserror = "1.0.58"
toml = "0.8.10"
