[package]
name = "karimado-tasks"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "LGPL-3.0-only"
edition = "2021"

[dependencies]
colored = "2.1.0"
flurry = "0.5.0"
handlebars = "5.1.0"
log = "0.4.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
shared_child = "1.0.0"
thiserror = "1.0.58"
toml = "0.8.10"

[dev-dependencies]
ctor = "0.2.7"
env_logger = "0.11.2"
