[package]
name = "karimado"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
git2 = "0.18.2"
path-absolutize = "3.1.1"
rust-embed = "8.2.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
