[package]
name = "karimado"
version = "0.0.0"
homepage = "https://github.com/karimadodev/karimado-cli"
repository = "https://github.com/karimadodev/karimado-cli"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
env_logger = "0.11.2"
git2 = "0.18.2"
globset = "0.4.14"
log = "0.4.21"
path-absolutize = "3.1.1"
rust-embed = "8.2.0"
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
toml = "0.8.10"
walkdir = "2.5.0"

[dependencies.karimado-source-dl]
version = "0.0.0"
path = "../karimado-source-dl"

[dependencies.karimado-tasks]
version = "0.0.0"
path = "../karimado-tasks"

[dev-dependencies]
trycmd = { version = "0.15.0", features = ["examples"] }
